<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_bubble_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bubble_name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundColor="#FFFDFD">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_bubble_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_bubble_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bubble_description"
        app:layout_constraintTop_toBottomOf="@id/input_bubble_name"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundColor="#FFFDFD">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_bubble_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_bubble_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/bubble_notifications"/>

    <CheckBox
        android:id="@+id/input_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/text_notifications"
        app:layout_constraintBottom_toBottomOf="@id/text_notifications"
        app:layout_constraintStart_toEndOf="@id/text_notifications"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/text_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_notifications"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/choose_contacts"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contacts_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_contacts" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_bubble_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/create_bubble" />

</androidx.constraintlayout.widget.ConstraintLayout>